# adventofcode-2022

./: .flake8  README.adoc  pyproject.toml
.github/workflows/: build.yml
output/: 15a.txt  15b.txt  17b.txt  20b.txt  21a.txt  21b.txt  5b.txt  7a.txt  7b.txt
solutions/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day18.py  day2.py  day20.py  day21.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
