[tool.poetry]
name = "aoc-22"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Dain Nilsson <dain@yubico.com>"]
packages = [
  { include = "aoc22" },
  { include = "solutions" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
aoc = "aoc22.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
